ingress-3-1.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: default-host
spec:
  rules:
    - host: audio.service.com
      http:
        paths:
          - backend:
              serviceName: audio-service
              servicePort: 80
    - host: video.service.com
      http:
        paths:
          - backend:
              serviceName: video-service
              servicePort: 8080
    - http:                # If any hosts not match in above rules then it will be forward to this service, works as default.
        paths:
          - backend:
              serviceName: default-service
              servicePort: 8585
